--- a/APPVIEW/Views/Account/Create.cshtml
+++ b/APPVIEW/Views/Account/Create.cshtml
@@ -17,7 +17,7 @@
     <div class="col-xxl">
         <div class="card mb-4">
             <div class="card-header d-flex align-items-center justify-content-between">
-                <h5 class="mb-0">Create a Color</h5>
+                <h5 class="mb-0">Tạo mới</h5>
 
             </div>
             <div class="card-body">
@@ -39,12 +39,12 @@
                     <div class="row mb-3">
                         <label asp-for="PhoneNumber" class="col-sm-2 col-form-label">Số điện thoại</label>
                         <div class="col-sm-10">
-                            <input type="text" class="form-control" asp-for="PhoneNumber" placeholder="Enter phone" />
+                            <input type="text" class="form-control" asp-for="PhoneNumber" placeholder="Nhập số điện thoại" />
                             <span asp-validation-for="PhoneNumber" class="text-danger"></span>
                         </div>
                     </div>
                     <div class="row mb-3">
-                        <label asp-for="Id_Role" class="col-sm-2 col-form-label">Role</label>
+                        <label asp-for="Id_Role" class="col-sm-2 col-form-label">Quyền</label>
                         <div class="col-md-4 user_role">
                             <div class="input-group">
                                 <label class="input-group-text" asp-for="Id_Role" >Quyền</label>
