--- a/APPVIEW/Views/ProductDetail/Create.cshtml
+++ b/APPVIEW/Views/ProductDetail/Create.cshtml
@@ -35,16 +35,15 @@
     <div class="col-xxl">
         <div class="card mb-4">
             <div class="card-header d-flex align-items-center justify-content-between">
-                <h5 class="mb-0">Create a Product</h5>
-
+                <h5 class="mb-0">Tạo mới</h5>
             </div>
             <div class="card-body">
                 <form asp-action="Create" method="post" enctype="multipart/form-data">
-                  
+
                     <div class="row mb-3">
-                        <label asp-for="Id_Category" class="col-sm-2 col-form-label">Category</label>
+                        <label asp-for="Id_Category" class="col-sm-2 col-form-label">Loại</label>
                         <div class="col-sm-10">
-                           <select asp-for="Id_Category" class="selectpicker form-control" aria-label="size 3 select example" onchange="addToList()">
+                            <select asp-for="Id_Category" class="selectpicker form-control" aria-label="size 3 select example" onchange="addToList()">
                                 @{
                                     if (ViewBag.Category != null)
                                     {
@@ -57,11 +56,11 @@
                             </select>
                             <span asp-validation-for="Id_Category" class="text-danger"></span>
                         </div>
-                    </div>   
+                    </div>
                     <div class="row mb-3">
-                        <label asp-for="Id_Size" class="col-sm-2 col-form-label">Size</label>
+                        <label asp-for="Id_Size" class="col-sm-2 col-form-label">Kích thước</label>
                         <div class="col-sm-10">
-                        <select asp-for="Id_Size" class="selectpicker form-control" aria-label="size 3 select example" onchange="addToList()">
+                            <select asp-for="Id_Size" class="selectpicker form-control" aria-label="size 3 select example" onchange="addToList()">
                                 @{
                                     if (ViewBag.Size != null)
                                     {
@@ -71,14 +70,14 @@
                                         }
                                     }
                                 }
-                       </select>
-                         <span asp-validation-for="Id_Size" class="text-danger"></span>
+                            </select>
+                            <span asp-validation-for="Id_Size" class="text-danger"></span>
                         </div>
                     </div>
                     <div class="row mb-3">
-                        <label asp-for="Id_Product" class="col-sm-2 col-form-label">Product</label>
+                        <label asp-for="Id_Product" class="col-sm-2 col-form-label">Sản phẩm</label>
                         <div class="col-sm-10">
-                       <select asp-for="Id_Product" class="selectpicker form-control"  aria-label="size 3 select example" onchange="addToList()">
+                            <select asp-for="Id_Product" class="selectpicker form-control" aria-label="size 3 select example" onchange="addToList()">
 
                                 @{
                                     if (ViewBag.Product != null)
@@ -89,120 +88,120 @@
                                         }
                                     }
                                 }
-                </select>
-                <span asp-validation-for="Id_Product" class="text-danger"></span>
-                        </div>
-                    </div>  
-                    <div class="row mb-3">
-                        <label asp-for="Id_Material" class="col-sm-2 col-form-label">Material</label>
-                        <div class="col-sm-10">
-                       <select asp-for="Id_Material" id="color" class="selectpicker form-control" aria-label="size 3 select example" onchange="addToList()">
-
-                    @{
-                        if (ViewBag.Material != null)
-                        {
-                            foreach (var item in ViewBag.Material)
-                            {
-                                <option value="@item.Id.ToString()"> @item.Name</option>
-                            }
-                        }
-                    }
-                </select>
-                <span asp-validation-for="Id_Material" class="text-danger"></span>
+                            </select>
+                            <span asp-validation-for="Id_Product" class="text-danger"></span>
                         </div>
                     </div>
                     <div class="row mb-3">
-                        <label asp-for="Id_Color" class="col-sm-2 col-form-label">Color</label>
+                        <label asp-for="Id_Material" class="col-sm-2 col-form-label">Chất liệu</label>
                         <div class="col-sm-10">
-                         <select asp-for="Id_Color" id="color" class="selectpicker form-control"  aria-label="size 3 select example" onchange="addToList()">
-                    
-                    @{
-                        if (ViewBag.Color != null)
-                        {
-                            foreach (var item in ViewBag.Color)
-                            {
-                            <option value="@item.Id.ToString()"> @item.Name</option>
-                            }
-                        }
-                    }
-                </select>
-                <span asp-validation-for="Id_Color" class="text-danger"></span>
-                        </div>
-                    </div> 
-                    <div class="row mb-3">
-                        <label asp-for="Id_supplier" class="col-sm-2 col-form-label">Supplier</label>
-                        <div class="col-sm-10">
-                        <select asp-for="Id_supplier" id="color" class="selectpicker form-control" aria-label="size 3 select example" onchange="addToList()">
+                            <select asp-for="Id_Material" id="color" class="selectpicker form-control" aria-label="size 3 select example" onchange="addToList()">
 
-                    @{
-                        if (ViewBag.Supplier != null)
-                        {
-                            foreach (var item in ViewBag.Supplier)
-                            {
-                                <option value="@item.Id.ToString()"> @item.Name</option>
-                            }
-                        }
-                    }
-                </select>
-                <span asp-validation-for="Id_supplier" class="text-danger"></span>
+                                @{
+                                    if (ViewBag.Material != null)
+                                    {
+                                        foreach (var item in ViewBag.Material)
+                                        {
+                                            <option value="@item.Id.ToString()"> @item.Name</option>
+                                        }
+                                    }
+                                }
+                            </select>
+                            <span asp-validation-for="Id_Material" class="text-danger"></span>
                         </div>
                     </div>
                     <div class="row mb-3">
-                        <label asp-for="Quantity" class="col-sm-2 col-form-label">Quantity</label>
+                        <label asp-for="Id_Color" class="col-sm-2 col-form-label">Màu sắc</label>
                         <div class="col-sm-10">
-                            <input type="number" min="0" class="form-control" asp-for="Quantity" placeholder="Quantity" />
+                            <select asp-for="Id_Color" id="color" class="selectpicker form-control" aria-label="size 3 select example" onchange="addToList()">
+
+                                @{
+                                    if (ViewBag.Color != null)
+                                    {
+                                        foreach (var item in ViewBag.Color)
+                                        {
+                                            <option value="@item.Id.ToString()"> @item.Name</option>
+                                        }
+                                    }
+                                }
+                            </select>
+                            <span asp-validation-for="Id_Color" class="text-danger"></span>
+                        </div>
+                    </div>
+                    <div class="row mb-3">
+                        <label asp-for="Id_supplier" class="col-sm-2 col-form-label">Nhà cung cấp</label>
+                        <div class="col-sm-10">
+                            <select asp-for="Id_supplier" id="color" class="selectpicker form-control" aria-label="size 3 select example" onchange="addToList()">
+
+                                @{
+                                    if (ViewBag.Supplier != null)
+                                    {
+                                        foreach (var item in ViewBag.Supplier)
+                                        {
+                                            <option value="@item.Id.ToString()"> @item.Name</option>
+                                        }
+                                    }
+                                }
+                            </select>
+                            <span asp-validation-for="Id_supplier" class="text-danger"></span>
+                        </div>
+                    </div>
+                    <div class="row mb-3">
+                        <label asp-for="Quantity" class="col-sm-2 col-form-label">Số lượng</label>
+                        <div class="col-sm-10">
+                            <input type="number" min="0" class="form-control" asp-for="Quantity" placeholder="Số lượng" />
                             <span asp-validation-for="Quantity" class="text-danger"></span>
                         </div>
-                    </div> 
+                    </div>
                     <div class="row mb-3">
-                        <label asp-for="Price" class="col-sm-2 col-form-label">Price</label>
+                        <label asp-for="Price" class="col-sm-2 col-form-label">Giá</label>
                         <div class="col-sm-10">
-                            <input type="number" min="0" class="form-control" asp-for="Price" placeholder="Price" />
+                            <input type="number" min="0" class="form-control" asp-for="Price" placeholder="Giá" />
                             <span asp-validation-for="Price" class="text-danger"></span>
                         </div>
-                    </div> 
+                    </div>
                     <div class="row mb-3">
-                        <label asp-for="Desciption" class="col-sm-2 col-form-label">Desciption</label>
+                        <label asp-for="Desciption" class="col-sm-2 col-form-label">Mô tả</label>
                         <div class="col-sm-10">
-                            <input type="text" class="form-control" asp-for="Desciption" placeholder="Desciption" />
+                            <input type="text" class="form-control" asp-for="Desciption" placeholder="Mô tả" />
                             <span asp-validation-for="Desciption" class="text-danger"></span>
                         </div>
                     </div>
 
                     <div class="row mb-3">
-                        <label asp-for="Status" class="col-sm-2 col-form-label">Status</label>
-                          <div class="col-sm-10 offset-sm-2">
+                        <label asp-for="Status" class="col-sm-2 col-form-label">Trạng thái</label>
+                        <div class="col-sm-10 offset-sm-2">
                             <div class="form-check">
-                                <input asp-for="Status" name="status" class="form-check-input" type="radio" value="1" id="defaultRadio1" checked/>
-                                <label class="form-check-label" asp-for="Status"> Use </label>
+                                <input asp-for="Status" name="status" class="form-check-input" type="radio" value="1" id="defaultRadio1" checked />
+                                <label class="form-check-label" asp-for="Status"> Sử dụng </label>
                             </div>
                             <div class="form-check">
-                                <input asp-for="Status" name="status" class="form-check-input" type="radio" value="0" id="defaultRadio2"  />
-                                <label class="form-check-label" for="defaultRadio2"> Not Use </label>
+                                <input asp-for="Status" name="status" class="form-check-input" type="radio" value="0" id="defaultRadio2" />
+                                <label class="form-check-label" for="defaultRadio2"> Không sử dụng </label>
                             </div>
                             <span asp-validation-for="Status" class="text-danger"></span>
                         </div>
                     </div>
-                     <div class="row mb-3">
-                <div class="mb-3">
-                    <label for="formFileMultiple" class="form-label">Chọn ảnh từ Máy tính</label>
-                    <input class="form-control" type="file" id="formFileMultiple" name="imageFile" multiple>
-                </div>
-            </div>
+                    <div class="row mb-3">
+                        <div class="mb-3">
+                            <label for="formFileMultiple" class="form-label">Chọn ảnh từ Máy tính</label>
+                            <input class="form-control" type="file" id="formFileMultiple" name="imageFile" multiple>
+                        </div>
+                    </div>
                     <div class="row justify-content-end">
                         <div class="col-sm-10">
                             <button type="submit" class="btn btn-primary">
-                                <span class="mdi mdi-check-outline"></span> Submit
+                                <span class="mdi mdi-check-outline"></span> Gửi
                             </button>
                             <div class="btn-group ms-2">
                                 <a href="#" class="btn btn-danger waves-effect waves-light" onclick="goBack()">
-                                    <span class="mdi mdi-close"></span> Cancel
+                                    <span class="mdi mdi-close"></span> Hủy bỏ
                                 </a>
                                 <script>
-function goBack() {
-    window.history.back();
-}
-</script>
+                                    function goBack() {
+                                        window.history.back();
+                                    }
+                                </script>
                             </div>
                         </div>
                     </div>
@@ -211,6 +210,7 @@ function goBack() {
         </div>
     </div>
 </div>
+
 <script>
     let myList;
 
